tests/baselines/reference/parserTypeQuery4.errors.txt
==== tests/cases/compiler/parserTypeQuery4.ts (1 errors) ====
    var v: typeof A.;
                    ~
!!! parserTypeQuery4.ts(1,17): error TS1003: Identifier expected.